Prevent text wrapping during layout

--- a/app/components/controls.component.scss
+++ b/app/components/controls.component.scss
@@ -14,4 +14,8 @@ rm-controls {
         width: 100%;
         align-self: center;
     }
+
+    paper-item {
+        white-space: nowrap;
+    }
 }
